--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,9 @@ name = "microscale"
 version = "0.1.0"
 description = ""
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "pillow>=12.1.0",
+]
 
 [project.scripts]
 microscale = "microscale.cli:main"
