--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,15 @@ python_version = "3.10"
 [tool.uv]
 package = true
 
+[dependency-groups]
+dev = [
+    "ipykernel>=7.1.0",
+    "mypy>=1.19.1",
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.14.10",
+]
+
 [project.optional-dependencies]
 dev = [
   "pytest",
